# testing

./: .gitignore  LICENSE  README  Readme.md  Vagrantfile  config-git.sh  index.html  o.txt
IOU/: deploy-01.sh
Jenkins/: Vagrantfile  deploy-01.sh
acestream/: .gitignore  acestream.conf  checks.sh  docker-sample.txt  ffmpeg_to_hls.sh  find.sh  hl5.sh  hls-old.sh  hls.old  hls.sh  kill-hls.sh  nginx-hls  notes.sh  start-hls.sh  test-acestream.py  test1.sh  vlc.txt  watchers.sh
acestream.2/: Makefile
adk/: pyproject.toml
adk/13-auth-agent/: env.sh
adk/13-auth-agent/auth_agent/: .gitignore  agent_cli.py  helpers.py  jwt_validate.py  readme.md  spec.yaml  tools_and_agent.py
adk/13-auth-agent/sample_data/: auth_req.txt
airflow/: docker-compose.yaml
alexa/: o.txt
ansible/: Vagrantfile
bitwarden/: tools.sh
ccm/: Readme.txt
celery/: Vagrantfile
centos/: Vagrantfile
create-rpm/: Vagrantfile  deploy.sh
deb/: deb.sh
esp32/: Vagrantfile
flink/: notes.md
gPhotos/: .gitignore  Vagrantfile  config.py  gAuth.py  gphotos.py  instagram.py  toInstagram.py  toInstagram.sh
gcloud/: .gitignore
go/: .gitignore  path.sh
golang/: animals_2.go
grafana/: Vagrantfile  import.sh
yahoo-finance/: Makefile  pyproject.toml
yahoo-finance/data/: .gitattributes  .gitignore
yahoo-finance/data/index/: SP_500.csv  STOXX_600.csv
yahoo-finance/documentation/: agent-data-fetcher.md  agent-kpi-analysis.md  agent-main-orchestrator.md  agents.md  cboe.md
yahoo-finance/finance/sample_data/: info.01.json
yahoo-finance/finance/scrape/: scrape-wikipedia.py
yahoo-finance/finance/tests/: test_cache.py  test_consecutive_max.py  test_dataframe.py  test_diff.py  test_fast_info.py  test_main_kpi.py  test_meanshift.py  test_tr.py
yahoo-finance/finance/yfin/: cache.py  fetch.py  fetch_info.py  fetch_serie.py  inventory.py  kpi.py  main.py  main_kpi.py  many_get.py  many_get2.py  test_kpi.py  try_strg.py
yahoo-finance/sample_data/: BAT.L.json
yahoo-finance/setup/: envvars.sh  main-vars.sh
(+1841 files in other folders)
