[project]
name = "yahoo-finance"
version = "0.0.1"
description = "Yahoo Finance"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pip>=25.2",
    "cachetools",
    "numpy>=2.3.5",
    "pandas>=2.3.3",
    "scipy>=1.17.0",
    "statsmodels>=0.14.6",
    "yfinance>=1.1.0",
    "matplotlib>=3.10.8",
    "scikit-learn>=1.8.0",
    "lxml>=6.0.2",
]

[tool.setuptools.packages.find]
#include = ["finance"]
exclude = ["finance.tests.*"]

[build-system]
requires = ["setuptools >= 77.0"]
build-backend = "setuptools.build_meta"

[project.scripts]
ticker_rev = "finance.yfin.many_get:main"